// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-quick-review - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Performs Azure compliance assessments using Azure Quick Review (azqr) to identify resources that don't comply with Azure best practices.
USE FOR: run azqr, check Azure compliance, assess Azure resources, find best practice violations, identify orphaned resources, compliance scan, security posture evaluation, Azure resource review.
DO NOT USE FOR: Azure Advisor queries (use azure-observability), cost analysis (use azure-cost-optimization), security hardening (use azure-security-hardening), deploying resources (use azure-deploy).
",
  "extractedKeywords": [
    "advisor",
    "aks",
    "analysis",
    "app service",
    "assess",
    "assessments",
    "authentication",
    "azqr",
    "azure",
    "azure-cost-optimization",
    "azure-deploy",
    "azure-observability",
    "azure-security-hardening",
    "best",
    "bicep",
    "check",
    "cli",
    "compliance",
    "comply",
    "container",
    "cosmos",
    "cost",
    "deploy",
    "deploying",
    "diagnostic",
    "evaluation",
    "find",
    "hardening",
    "identify",
    "identity",
    "key vault",
    "kubernetes",
    "mcp",
    "orphaned",
    "performs",
    "posture",
    "practice",
    "practices",
    "queries",
    "quick",
    "redis",
    "resource",
    "resources",
    "review",
    "scan",
    "security",
    "sql",
    "storage",
    "that",
    "using",
    "violations",
    "with",
  ],
  "name": "azure-quick-review",
}
`;

exports[`azure-quick-review - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "advisor",
  "aks",
  "analysis",
  "app service",
  "assess",
  "assessments",
  "authentication",
  "azqr",
  "azure",
  "azure-cost-optimization",
  "azure-deploy",
  "azure-observability",
  "azure-security-hardening",
  "best",
  "bicep",
  "check",
  "cli",
  "compliance",
  "comply",
  "container",
  "cosmos",
  "cost",
  "deploy",
  "deploying",
  "diagnostic",
  "evaluation",
  "find",
  "hardening",
  "identify",
  "identity",
  "key vault",
  "kubernetes",
  "mcp",
  "orphaned",
  "performs",
  "posture",
  "practice",
  "practices",
  "queries",
  "quick",
  "redis",
  "resource",
  "resources",
  "review",
  "scan",
  "security",
  "sql",
  "storage",
  "that",
  "using",
  "violations",
  "with",
]
`;
